[gd_scene load_steps=8 format=2]

[ext_resource path="res://canvas/DecorationEditor.gd" type="Script" id=1]
[ext_resource path="res://assets/bptex.png" type="Texture" id=2]
[ext_resource path="res://ui/EditorButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://canvas/DecorationCanvas.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/ColorPicker.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/PWScratchedfont.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 52
use_filter = true
font_data = ExtResource( 6 )

[node name="DecorationEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -238.0
margin_right = 1000.0
margin_bottom = 238.0
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
margin_right = 140.0
margin_bottom = 476.0
custom_constants/separation = 30
alignment = 1

[node name="Undo" parent="HBoxContainer2/VBoxContainer" instance=ExtResource( 3 )]
editor/display_folded = true
margin_top = 134.0
margin_bottom = 183.0

[node name="Label" parent="HBoxContainer2/VBoxContainer/Undo" index="0"]
text = "Undo"

[node name="Clear" parent="HBoxContainer2/VBoxContainer" instance=ExtResource( 3 )]
editor/display_folded = true
margin_top = 213.0
margin_bottom = 262.0

[node name="Label" parent="HBoxContainer2/VBoxContainer/Clear" index="0"]
text = "Clear"

[node name="Accept" parent="HBoxContainer2/VBoxContainer" instance=ExtResource( 3 )]
editor/display_folded = true
margin_top = 292.0
margin_bottom = 341.0

[node name="Label" parent="HBoxContainer2/VBoxContainer/Accept" index="0"]
text = "Accept"

[node name="DecorationCanvas" parent="HBoxContainer2" instance=ExtResource( 4 )]
margin_left = 160.0
margin_right = 760.0
margin_bottom = 476.0
rect_min_size = Vector2( 600, 476 )

[node name="ColorPicker" parent="HBoxContainer2" instance=ExtResource( 5 )]
margin_left = 780.0
margin_right = 980.0
margin_bottom = 476.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 10.0
margin_right = 512.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "CURRENT STEP"
align = 1
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/Undo" to="." method="_on_Undo_pressed"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/Accept" to="." method="_on_Accept_pressed"]
[connection signal="color_changed" from="HBoxContainer2/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="width_changed" from="HBoxContainer2/ColorPicker" to="." method="_on_ColorPicker_width_changed"]

[editable path="HBoxContainer2/VBoxContainer/Undo"]

[editable path="HBoxContainer2/VBoxContainer/Clear"]

[editable path="HBoxContainer2/VBoxContainer/Accept"]
